--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,12 +47,18 @@ jobs:
           - build: linux-musl
             os: ubuntu-22.04
             target: x86_64-unknown-linux-musl
-          - build: linux-arm
+          - build: linux-arm64
             os: ubuntu-22.04
             target: aarch64-unknown-linux-gnu
-          - build: linux-arm
+          - build: linux-arm64
             os: ubuntu-22.04
             target: aarch64-unknown-linux-musl
+          - build: linux-armv7
+            os: ubuntu-22.04
+            target: armv7-unknown-linux-gnueabihf
+          - build: linux-armv7
+            os: ubuntu-22.04
+            target: armv7-unknown-linux-musleabihf
           - build: macos
             os: macos-latest
             target: x86_64-apple-darwin
