--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: release
 on:
+  workflow_dispatch:
+  pull_request:
   push:
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+"
+
 jobs:
   create-release:
     name: create-release
