--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,21 @@ on:
   push:
 
 jobs:
+  create-release:
+    name: create-release
+    runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
+      trip_version: ${{ env.TRIP_VERSION }}
+    steps:
+      - name: Get the release version from the tag
+        shell: bash
+        run: |
+          ls
+
   build-release:
     name: build-release
+    needs: ['create-release']
     runs-on: ${{ matrix.os }}
     env:
       CARGO: cargo
